# ContentProductionSystem

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: DEPLOYMENT.md
src/content_production_team/: __init__.py  app.py  config.py  workflow.py
