[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-production-team"
version = "0.1.0"
description = "A Streamlit-based multi-agent content workflow for research, drafting, and grading"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.39.0",
  "langchain-openai>=0.2.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
content-production-team = "content_production_team.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
